[gd_scene load_steps=18 format=3 uid="uid://bxtor230t6e10"]

[ext_resource type="Script" uid="uid://bkj7eqrednoq1" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://pc6wdemwyi5p" path="res://assets/sprietes/ground+background/ground.png" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://b7c81kf5ikg6" path="res://player.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bt5ki64fi2bdc" path="res://hearts.tscn" id="3_5vw27"]
[ext_resource type="PackedScene" uid="uid://4k7kqb3vt7v2" path="res://items.tscn" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://beo8lhgflq11n" path="res://assets/sprietes/ground+background/ground2.png" id="4_7mycd"]
[ext_resource type="PackedScene" uid="uid://couq8wj4eb55u" path="res://energy.tscn" id="4_w48qg"]
[ext_resource type="PackedScene" uid="uid://bgh183yp2hi7y" path="res://hud.tscn" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://bb6a35l44kqs1" path="res://assets/sprietes/ground+background/backrground.png" id="7_272bh"]
[ext_resource type="AudioStream" uid="uid://csveb2jgywe2m" path="res://Sounds/music/background_in_play.mp3" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://bdsnaoeky6f4a" path="res://Sounds/sfx/game-over.mp3" id="10_4c57u"]
[ext_resource type="AudioStream" uid="uid://bptl33j3fgwsl" path="res://Sounds/sfx/Item_collect.mp3" id="11_efxa6"]
[ext_resource type="AudioStream" uid="uid://bucs4xgeua24m" path="res://Sounds/sfx/lose_life.wav" id="12_dg77c"]
[ext_resource type="AudioStream" uid="uid://1wdnemksyu4x" path="res://Sounds/sfx/heart_collect.wav" id="12_ycdy4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7dm0k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(640, 31.5)

[sub_resource type="Curve2D" id="Curve2D_lquwl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 632, 0)
}
point_count = 2

[node name="main" type="Node"]
script = ExtResource("1_1bvp3")
item_scene = ExtResource("3_lquwl")
hearts_scene = ExtResource("3_5vw27")
energy_scene = ExtResource("4_w48qg")

[node name="Ground" type="StaticBody2D" parent="." groups=["ground"]]
collision_layer = 2
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_7dm0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(320, 328)
shape = SubResource("RectangleShape2D_7dm0k")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
position = Vector2(16, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D2" type="Sprite2D" parent="Ground"]
position = Vector2(48, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D3" type="Sprite2D" parent="Ground"]
position = Vector2(80, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D4" type="Sprite2D" parent="Ground"]
position = Vector2(112, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D5" type="Sprite2D" parent="Ground"]
position = Vector2(144, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D6" type="Sprite2D" parent="Ground"]
position = Vector2(176, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D7" type="Sprite2D" parent="Ground"]
position = Vector2(208, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D8" type="Sprite2D" parent="Ground"]
position = Vector2(240, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D9" type="Sprite2D" parent="Ground"]
position = Vector2(272, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D10" type="Sprite2D" parent="Ground"]
position = Vector2(304, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D11" type="Sprite2D" parent="Ground"]
position = Vector2(336, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D12" type="Sprite2D" parent="Ground"]
position = Vector2(368, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D13" type="Sprite2D" parent="Ground"]
position = Vector2(400, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D14" type="Sprite2D" parent="Ground"]
position = Vector2(432, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D15" type="Sprite2D" parent="Ground"]
position = Vector2(464, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D16" type="Sprite2D" parent="Ground"]
position = Vector2(496, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D17" type="Sprite2D" parent="Ground"]
position = Vector2(528, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D18" type="Sprite2D" parent="Ground"]
position = Vector2(560, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D19" type="Sprite2D" parent="Ground"]
position = Vector2(592, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D20" type="Sprite2D" parent="Ground"]
position = Vector2(624, 328)
texture = ExtResource("1_h2yge")

[node name="Sprite2D21" type="Sprite2D" parent="Ground"]
position = Vector2(624, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D22" type="Sprite2D" parent="Ground"]
position = Vector2(592, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D23" type="Sprite2D" parent="Ground"]
position = Vector2(560, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D24" type="Sprite2D" parent="Ground"]
position = Vector2(528, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D25" type="Sprite2D" parent="Ground"]
position = Vector2(496, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D26" type="Sprite2D" parent="Ground"]
position = Vector2(464, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D27" type="Sprite2D" parent="Ground"]
position = Vector2(432, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D28" type="Sprite2D" parent="Ground"]
position = Vector2(400, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D29" type="Sprite2D" parent="Ground"]
position = Vector2(368, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D30" type="Sprite2D" parent="Ground"]
position = Vector2(336, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D31" type="Sprite2D" parent="Ground"]
position = Vector2(304, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D32" type="Sprite2D" parent="Ground"]
position = Vector2(272, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D33" type="Sprite2D" parent="Ground"]
position = Vector2(240, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D34" type="Sprite2D" parent="Ground"]
position = Vector2(208, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D35" type="Sprite2D" parent="Ground"]
position = Vector2(176, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D36" type="Sprite2D" parent="Ground"]
position = Vector2(144, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D37" type="Sprite2D" parent="Ground"]
position = Vector2(112, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D38" type="Sprite2D" parent="Ground"]
position = Vector2(80, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D39" type="Sprite2D" parent="Ground"]
position = Vector2(48, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Sprite2D40" type="Sprite2D" parent="Ground"]
position = Vector2(16, 360)
rotation = -3.1415927
texture = ExtResource("4_7mycd")

[node name="Player" parent="." instance=ExtResource("2_1bvp3")]
position = Vector2(328, 296)

[node name="ItemPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_lquwl")

[node name="ItemSpawnLocation" type="PathFollow2D" parent="ItemPath"]
position = Vector2(8, 0)

[node name="ItemTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(320, 304)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -7
position = Vector2(320, 181.5)
scale = Vector2(1, 1.0416666)
texture = ExtResource("7_272bh")

[node name="HeartsTimer" type="Timer" parent="."]

[node name="Backgroundmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kek77")
volume_db = -20.0
autoplay = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_4c57u")
volume_db = -5.0

[node name="ItemCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_efxa6")
volume_db = -8.0

[node name="HeartCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ycdy4")
volume_db = -5.0

[node name="HeartLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_dg77c")
volume_db = -10.0

[node name="EnergyTimer" type="Timer" parent="."]

[connection signal="timeout" from="ItemTimer" to="." method="_on_item_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="HeartsTimer" to="." method="_on_hearts_timer_timeout"]
[connection signal="timeout" from="EnergyTimer" to="." method="_on_energy_timer_timeout"]
